bin_PROGRAMS=bullwhip
#bullwhip_SOURCES=Actor.cpp BullwhipContactListener.cpp Constants.cpp Definition.cpp Entity.cpp File.cpp Game.cpp ImageManager.cpp Item.cpp JMath.cpp MainMenuState.cpp PlayState.cpp Player.cpp SceneManager.cpp State.cpp StateManager.cpp Vec2.cpp main.cpp PhysicsWrappers/BoxDynamicBody.cpp PhysicsWrappers/BoxStaticBody.cpp PhysicsWrappers/BoxTriggerBody.cpp PhysicsWrappers/BoxWorld.cpp entites/InvisEntity.cpp entites/InvisPhysEntity.cpp entites/ent_item.cpp entites/ent_string.cpp entites/game_setglobal.cpp entites/game_spawnpoint.cpp entites/phys_dynamic.cpp entites/phys_static.cpp entites/tele_coord.cpp entites/tele_obj.cpp Component.cpp Object.cpp ObjectManager.cpp
bullwhip_SOURCES=BullwhipContactListener.cpp Constants.cpp Definition.cpp Entity.cpp File.cpp Game.cpp ImageManager.cpp JMath.cpp MainMenuState.cpp PlayState.cpp SceneManager.cpp State.cpp StateManager.cpp Vec2.cpp main.cpp PhysicsWrappers/BoxDynamicBody.cpp PhysicsWrappers/BoxStaticBody.cpp PhysicsWrappers/BoxTriggerBody.cpp PhysicsWrappers/BoxWorld.cpp Component.cpp Object.cpp ObjectManager.cpp components/Graphical.cpp
